Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
 } */
 
 .App-header {
-  min-height: 90vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -74,7 +74,7 @@
 
 .about {
   margin: 20px;
-  min-height: 90vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -91,9 +91,10 @@
 .content {
   text-align: left;
   line-height: 25px;
-  font-size: 20px;
+  font-size: 18px;
   text-align: justify;
   margin-bottom: 50px;
+  padding: 10px;
 }
 
 .footer {
